--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: "3.9"
 services:
   tailscale:
-    image: testtail
+    image: tailscale-sidecar-proxy
     environment:
       TAILSCALE_AUTH_KEY: ${TAILSCALE_AUTH_KEY:?err}
-      TAILSCALE_HOSTNAME: ${TAILSCALE_HOSTNAME:-example-service}
+      TAILSCALE_HOSTNAME: test service
       TAILSCALE_SERVE_PORT: 80
     volumes:
       - /var/lib/tailscale_state/
