--- a/renovate.json
+++ b/renovate.json
@@ -9,6 +9,11 @@
   },
   "packageRules": [
     {
+      "matchDepTypes": ["devDependencies"],
+      "matchPackagePatterns": ["lint", "prettier"],
+      "automerge": true
+    },
+    {
       "matchUpdateTypes": ["minor", "patch"],
       "matchCurrentVersion": "!/^0/",
       "automerge": true
