--- a/.github/workflows/release-on-ts-update.yml
+++ b/.github/workflows/release-on-ts-update.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   if_merged:
-    if: github.event.pull_request.merged && contains(github.event.pull_request.title, 'Update tailscale/tailscale Docker tag')
+    if: github.event.pull_request.merged && contains(github.event.pull_request.title, 'Update ghcr.io/tailscale/tailscale Docker tag')
     runs-on: ubuntu-latest
     permissions:
       contents: write
