Forgot yaml, test again

--- a/.github/workflows/release-on-ts-update.yml
+++ b/.github/workflows/release-on-ts-update.yml
@@ -22,5 +22,5 @@ jobs:
         generateReleaseNotes: true
         tag: ${{steps.get-version.outputs.version}}
     - id: docker-publish
-      uses: ./.github/actions/docker-publish
+      uses: ./.github/actions/docker-publish.yaml
     
