fix yml vs yaml

--- a/.github/workflows/release-on-ts-update.yml
+++ b/.github/workflows/release-on-ts-update.yml
@@ -22,5 +22,4 @@ jobs:
         generateReleaseNotes: true
         tag: ${{steps.get-version.outputs.version}}
   docker-publish:
-    uses: ./.github/actions/docker-publish.yaml
-    
+    uses: ./.github/actions/docker-publish.yml
