Switch to token

--- a/.github/workflows/release-on-ts-update.yml
+++ b/.github/workflows/release-on-ts-update.yml
@@ -21,5 +21,4 @@ jobs:
       with:
         generateReleaseNotes: true
         tag: ${{steps.get-version.outputs.version}}
-  docker-publish:
-    uses: ./.github/actions/docker-publish.yml
+        token: ${{secrets.RELEASE_TOKEN}}
