--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,8 +6,8 @@ name: Docker
 # documentation.
 
 on:
-  workflow_dispatch:
-  workflow_call:
+  release:
+    types: [ released ]
   pull_request:
     branches: [ "main" ]
 
@@ -20,7 +20,6 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       security-events: write
