--- a/.github/workflows/release-on-ts-update.yml
+++ b/.github/workflows/release-on-ts-update.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - id: get-version
       run: |
-        version=$(echo ${{github.event.pull_request.title}} | grep -Eo 'v[0-9]+\.[0-9]+\.[0-9]+')
+        version=$(echo ${{github.event.pull_request.title}} | grep -Eo '[0-9]+\.[0-9]+\.[0-9]+')
         echo "version=$version" >> $GITHUB_OUTPUT
     - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
     - uses: ncipollo/release-action@v1
