--- a/renovate.json
+++ b/renovate.json
@@ -5,13 +5,13 @@
   ],
   "lockFileMaintenance": {
     "enabled": true,
-    "automerge": true
+    "automerge": true,
     "automergeType": "branch"
   },
   "packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
-      "automerge": true
+      "automerge": true,
       "automergeType": "branch"
     }
   ]
